--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^10.16.16",
+    "gsap": "^3.12.1",
+    "locomotive-scroll": "^5.0.0-beta.8",
     "next": "14.0.4",
+    "next-i18next": "^15.1.1",
+    "next-intl": "^3.4.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
